guides/v3.5.0/components/customizing-a-components-element.md
By default, each component is backed by a `<div>` element. If you were
to look at a rendered component in your developer tools, you would see
a DOM representation that looked something like:

```html
<div id="ember180" class="ember-view">
  <h1>My Component</h1>
</div>
```

You can customize what type of element Ember generates for your
component, including its attributes and class names, by creating a
subclass of `Component` in your JavaScript.

### Customizing the Element

To use a tag other than `div`, subclass `Component` and assign it
a `tagName` property. This property can be any valid HTML5 tag name as a
string.

```javascript {data-filename=app/components/navigation-bar.js}
import Component from '@ember/component';

export default Component.extend({
  tagName: 'nav'
});
```

```handlebars {data-filename=app/templates/components/navigation-bar.hbs}
<ul>
  <li>{{#link-to "home"}}Home{{/link-to}}</li>
  <li>{{#link-to "about"}}About{{/link-to}}</li>
</ul>
```

### Customizing the Element's Class

You can specify the class of a component's element at invocation time the same
way you would for a regular HTML element:

```handlebars
{{navigation-bar class="primary"}}
```

You can also specify which class names are applied to the component's
element by setting its `classNames` property to an array of strings:

```javascript {data-filename=app/components/navigation-bar.js}
import Component from '@ember/component';

export default Component.extend({
  classNames: Object.freeze(['primary'])
});
```

If you want class names to be determined by properties of the component,
you can use class name bindings. If you bind to a Boolean property, the
class name will be added or removed depending on the value:

```javascript {data-filename=app/components/todo-item.js}
import Component from '@ember/component';

export default Component.extend({
  classNameBindings: ['isUrgent'],
  isUrgent: true
});
```

This component would render the following:

```html
<div class="ember-view is-urgent"></div>
```

If `isUrgent` is changed to `false`, then the `is-urgent` class name will be removed.

By default, the name of the Boolean property is dasherized. You can customize the class name
applied by delimiting it with a colon:

```javascript {data-filename=app/components/todo-item.js}
import Component from '@ember/component';

export default Component.extend({
  classNameBindings: Object.freeze(['isUrgent:urgent']),
  isUrgent: true
});
```

This would render this HTML:

```html
<div class="ember-view urgent">
```

Besides the custom class name for the value being `true`, you can also specify a class name which is used when the value is `false`:

```javascript {data-filename=app/components/todo-item.js}
import Component from '@ember/component';

export default Component.extend({
  classNameBindings: Object.freeze(['isEnabled:enabled:disabled']),
  isEnabled: false
});
```

This would render this HTML:

```html
<div class="ember-view disabled">
```

You can also specify a class which should only be added when the property is
`false` by declaring `classNameBindings` like this:

```javascript {data-filename=app/components/todo-item.js}
import Component from '@ember/component';

export default Component.extend({
  classNameBindings: Object.freeze(['isEnabled::disabled']),
  isEnabled: false
});
```

This would render this HTML:

```html
<div class="ember-view disabled">
```

If the `isEnabled` property is set to `true`, no class name is added:

```html
<div class="ember-view">
```

If the bound property's value is a string, that value will be added as a class name without
modification:

```javascript {data-filename=app/components/todo-item.js}
import Component from '@ember/component';

export default Component.extend({
  classNameBindings: Object.freeze(['priority']),
  priority: 'highestPriority'
});
```

This would render this HTML:

```html
<div class="ember-view highestPriority">
```

### Customizing Attributes

You can bind attributes to the DOM element that represents a component
by using `attributeBindings`:

```javascript {data-filename=app/components/link-item.js}
import Component from '@ember/component';

export default Component.extend({
  tagName: 'a',
  attributeBindings: Object.freeze(['href']),

  href: 'http://emberjs.com'
});
```

You can also bind these attributes to differently named properties:

```javascript {data-filename=app/components/link-item.js}
import Component from '@ember/component';

export default Component.extend({
  tagName: 'a',
  attributeBindings: Object.freeze(['customHref:href']),

  customHref: 'http://emberjs.com'
});
```

If the attribute is null, it won't be rendered:

```javascript {data-filename=app/components/link-item.js}
import Component from '@ember/component';

export default Component.extend({
  tagName: 'span',
  attributeBindings: Object.freeze(['title']),

  title: null,
});
```
This would render this HTML when no title is passed to the component:

```html
<span class="ember-view">
```

...and this HTML when a title of "Ember JS" is passed to the component:

```html
<span class="ember-view" title="Ember JS">
```
